# optitrack

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/optitrack/: .VrpnClient.hpp.swo  CalcFrequency.hpp  Messages.hpp  UDPConnection.hpp  VrpnClient.hpp  reset_estimator.hpp
launch/: recv_mocap_launch.py
src/: UDPConnection.cpp  VrpnClient.cpp  calc_mocap_frequency.cpp  calc_mocap_frequncy.cpp  publish_mocap_odometry.cpp  reset_estimator.cpp  starling-pose-stream.cpp
