<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optitrack</name>
  <version>0.0.0</version>
  <description>Package to use VRPN with Optitrack to provide external pose data to Starling 2. Receives Motive VRPN Data and publishes to "/fmu/in/vehicle_visual_odometry". Also provides node to reset the EKF2 estimator and wait for it to converge with the mocap data.</description>
  <maintainer email="ricardometral2005@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
